--- a/service/static/index.html
+++ b/service/static/index.html
@@ -86,7 +86,7 @@
             <!-- QUANTITY -->
             <div class="form-group">
               <label class="control-label col-sm-2" for="item_quantity"
-                >Category:</label
+                >Quantity:</label
               >
               <div class="col-sm-10">
                 <input
