--- a/service/static/index.html
+++ b/service/static/index.html
@@ -105,8 +105,8 @@
               >
               <div class="col-sm-10">
                 <select class="form-control" id="item_condition">
-                  <option value="NEW">New</option>
-                  <option value="USED">Used</option>
+                  <option value="NEW">NEW</option>
+                  <option value="USED">USED</option>
                 </select>
               </div>
             </div>
