Fixed bugs in rest_api.js, index.html, items.feature

--- a/service/static/index.html
+++ b/service/static/index.html
@@ -30,7 +30,7 @@
           <div class="form-horizontal">
             <div class="form-group">
               <label class="control-label col-sm-2" for="item_id"
-                >Item ID:</label
+                >ID:</label
               >
               <div class="col-sm-6">
                 <input
