--- a/service/static/index.html
+++ b/service/static/index.html
@@ -126,6 +126,9 @@
                 <button type="submit" class="btn btn-warning" id="update-btn">
                   Update
                 </button>
+                <button type="submit" class="btn btn-danger" id="disable-btn">
+                  Set Quantity to Zero
+                </button>
               </div>
             </div>
           </div>
