--- a/service/static/index.html
+++ b/service/static/index.html
@@ -127,7 +127,7 @@
                   Update
                 </button>
                 <button type="submit" class="btn btn-danger" id="disable-btn">
-                  Set Quantity to Zero
+                  Disable (Sets Quantity to Zero)
                 </button>
               </div>
             </div>
